--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "config": "^3.3.1",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "winston": "^3.3.3",
+    "winston-mongodb": "^5.0.1"
   }
 }
