--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn nodemon index.js"
+    "start": "yarn nodemon index.js",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@hapi/joi": "^17.1.1",
@@ -21,5 +22,8 @@
     "pug": "^3.0.0",
     "winston": "^3.3.3",
     "winston-mongodb": "^5.0.1"
+  },
+  "devDependencies": {
+    "jest": "^26.3.0"
   }
 }
