--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "yarn node index.js",
+    "start": "node index.js",
     "test": "jest --testEnvironment=node --runInBand --detectOpenHandles --forceExit"
   },
   "engines": {
