--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "fawn": "^2.1.5",
     "helmet": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
